--- a/index.html
+++ b/index.html
@@ -4,11 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Landing-Page</title>
+    <title>Landing Page</title>
 </head>
 <body>
-    <nav class="navbar">
-        
-    </nav>
+    
+    <div class="header">
+        <div class="nav">
+            <div class="logo">Header logo</div>
+            <div class="nav-opt">
+                <ul>
+                    <li>header link one</li>
+                    <li>header link two</li>
+                    <li>header link three</li>
+                    </ul>
+            </div>
+        </div>
+        <div class="info">
+            <div class="sign-up">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower</p>
+                <button>Sign up</button>
+            </div>
+            <div class="image">this is a placeholder </div>
+        </div>
+    </div>
+
+    <div class="random-info">
+        <div>Some random information.</div>
+        <div class="container">
+            <div class="box"></div>
+            <div>this is some subtext under an illustration or image</div>
+            <div class="box"></div>
+            <div>this is some subtext under an illustration or image</div>
+            <div class="box"></div>
+            <div>this is some subtext under an illustration or image</div>
+            <div class="box"></div>
+            <div>this is some subtext under an illustration or image</div>
+        </div>
+    </div>
+    <div class="text"><p>This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? all I know is that it looks nice.</p>
+    <p>Thor, God of Thunder</p>
+    </div>
+    <div class="call-to-action">
+        <div>
+            <p>Call to action! It's time!</p>
+            <p>Sing up for our product by clicking that button right over there!</p>
+            <button>Sing up</button>
+        </div>
+    </div>
+    <footer>Copyright © The Odin Project 2021</footer>
 </body>
 </html>
