--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <div class="logo">Header logo</div>
             <div class="nav-opt">
                 <ul>
-                    <li>header link one</li>
-                    <li>header link two</li>
-                    <li>header link three</li>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
                     </ul>
             </div>
         </div>
@@ -25,7 +25,7 @@
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower</p>
                 <button>Sign up</button>
             </div>
-            <div class="image">this is a placeholder </div>
+            <div class="image">this is a placeholder for an image </div>
         </div>
     </div>
 
