style: Improve layout and formatting of the information section
- Replace div.box inside div.container with img elements to allow text-align to center both the images and text within div.inf.

- Styled div.box to create square placeholders for images.

- Styled div.container to improve section formatting.

- Set a specific width for div.inf to better align its content.

--- a/index.html
+++ b/index.html
@@ -34,14 +34,24 @@
         <div class="random-info">
             <div>Some random information.</div>
             <div class="container">
-                <div class="box"></div>
-                <div>this is some subtext under an illustration or image</div>
-                <div class="box"></div>
-                <div>this is some subtext under an illustration or image</div>
-                <div class="box"></div>
-                <div>this is some subtext under an illustration or image</div>
-                <div class="box"></div>
-                <div>this is some subtext under an illustration or image</div>
+
+                <div class="inf"> 
+                    <img class="box">
+                    <div>this is some subtext under an illustration or image</div>
+                </div>
+                <div class="inf">
+                    <img class="box">
+                    <div>this is some subtext under an illustration or image</div>
+                </div>
+                <div class="inf">
+                    <img class="box">
+                    <div>this is some subtext under an illustration or image</div>
+                </div>
+                <div class="inf">
+                    <img class="box">
+                    <div>this is some subtext under an illustration or image</div>
+                </div>
+                   
             </div>
         </div>
         <div class="text"><p>This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? all I know is that it looks nice.</p>
