--- a/index.html
+++ b/index.html
@@ -54,8 +54,12 @@
                    
             </div>
         </div>
-        <div class="text"><p>This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? all I know is that it looks nice.</p>
-        <p>Thor, God of Thunder</p>
+        
+        <div class="quote-section">
+            <div class="center-content">
+                <p>This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? all I know is that it looks nice.</p>
+                <p>-Thor, God of Thunder</p>
+            </div>
         </div>
         <div class="call-to-action">
             <div>
