update: refactor call-to-action section with new layout and button styles

--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@
             </div>
         </div>
         <div class="call-to-action">
-            <div>
-                <p>Call to action! It's time!</p>
-                <p>Sing up for our product by clicking that button right over there!</p>
-                <button>Sing up</button>
+            <div class="blue-background">
+                <div class="text-call">
+                    <p>Call to action! It's time!</p>
+                    <p>Sing up for our product by clicking that button right over there!</p>
+                </div>
+                <button class="button2">Sing up</button>
             </div>
         </div>
     </div>
